Fragment & DataModel Beginnings
--Added BinnacleFragment implementation & layout
--Removed unneeded boilerplate from ChartFragment
--Added MainActivity code to navigate between fragments based on interaction with BottomNavigationView
--Added abstract Boat class to model
--Added abstract and implemented DataModel to model
--Added abstract Wind class to model
--Renamed NavHostFragment to something less vague
--Added boilerplate Binnacle Fragment
--Changed names, string references, and added new Strings for BottomNavigationView
--Changed starting Fragment to Binnacle Fragment

--- a/Binnacle/app/src/main/res/layout/activity_main.xml
+++ b/Binnacle/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" app:navGraph="@navigation/nav_graph" app:defaultNavHost="true"
-            tools:layout_editor_absoluteY="327dp" tools:layout_editor_absoluteX="142dp" android:id="@+id/fragment"/>
+            tools:layout_editor_absoluteY="327dp" tools:layout_editor_absoluteX="142dp" android:id="@+id/navHostFragment"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
             android:layout_width="0dp"
