--- a/Binnacle/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Binnacle/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/navigation_home"
+            android:id="@+id/navigation_readouts"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_readouts"/>
 
     <item
-            android:id="@+id/navigation_dashboard"
+            android:id="@+id/navigation_binnacle"
             android:icon="@drawable/ic_dashboard_black_24dp"
             android:title="@string/title_binnacle"/>
 
     <item
-            android:id="@+id/navigation_notifications"
+            android:id="@+id/navigation_charts"
             android:icon="@drawable/ic_notifications_black_24dp"
             android:title="@string/title_charts"/>
 
