--- a/Binnacle/app/src/main/res/layout/activity_main.xml
+++ b/Binnacle/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent" app:navGraph="@navigation/nav_graph" app:defaultNavHost="true"
             tools:layout_editor_absoluteY="327dp" tools:layout_editor_absoluteX="142dp" android:id="@+id/navHostFragment"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/nav_view"
+            android:id="@+id/bottomNavigationView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="?android:attr/windowBackground"
